--- a/_config.yml
+++ b/_config.yml
@@ -248,3 +248,18 @@ defaults:
       comments: # true
       share: true
       related: true
+
+
+# Settings for builing master branch with travis-ci
+# with jekyll-travis
+
+# Settings for deploy rake task
+# Username and repo of Github repo, e.g.
+# https://github.com/USERNAME/REPO.git
+# username defaults to ENV['GIT_NAME'] used by Travis
+# repo defaults to USERNAME.github.io
+# Branch defaults to "source" for USERNAME.github.io
+# or "master" otherwise
+username: 4brunu
+repo: 4brunu.github.io
+source_branch: master
