--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-# theme: minimal-mistakes-jekyll
-theme: minima
+theme: minimal-mistakes-jekyll
+# theme: minima
 
 # Site Settings
 locale                   : "en"
