remove jekyll-seo-tag dependency

--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,7 @@ gems:
   - jekyll-gist
   - jekyll-feed
   - jemoji
-  - jekyll-seo-tag
+  # - jekyll-seo-tag
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -197,7 +197,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jemoji
-  - jekyll-seo-tag
+  # - jekyll-seo-tag
 
 
 # Archives
