--- a/_config.yml
+++ b/_config.yml
@@ -244,7 +244,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: "default"
+      layout: single
       author_profile: true
       read_time: true
       comments: # true
