--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 language: ruby
-cache: bundler
+# cache: bundler
 rvm:
 - 2.3.3
 
@@ -8,7 +8,7 @@ install:
   # Install Jekyll and dependencies
   - bundle install
 
-script: bundle exec rake site:deploy --quiet #--trace
+script: bundle exec rake site:deploy #--quiet #--trace
 
 # Generate your secure token with the travis gem:
 # get Github token from your Travis CI profile page
