remove read_time and add tags

--- a/_config.yml
+++ b/_config.yml
@@ -245,7 +245,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true # true
       share: true
       related: true
