--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@ main:
     url: /about/
   - title: "Categories"
     url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "Archive"
     url: /year-archive/
