--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ atom_feed:
 
 # SEO Related
 google_site_verification :
-bing_site_verification   :
+bing_site_verification   : "0D255F2A791547A7D3066CC9DBF94778"
 alexa_site_verification  :
 yandex_site_verification :
 
