--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Archive"
-    url: /year-archive/
+  - title: "Posts"
+    url: /posts/
   - title: "Tags"
     url: /tags/
   - title: "Categories"
